--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -145,6 +145,9 @@ $btn-outline-colors:    $base-colors !default;
 $list-colors:           $base-colors !default;
 $switch-colors:         $base-colors !default;
 $table-colors:          $base-colors !default;
+$utility-bg-colors:     $base-colors !default;
+$utility-border-colors: $base-colors !default;
+$utility-text-colors:   $base-colors !default;
 
 $alert-levels:          $level-context !default;
 $badge-levels:          $level-control !default;
