--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -123,7 +123,8 @@
 // Generate series of `.navbar-expand-*` responsive classes for configuring
 // where your navbar collapses.
 .navbar-expand {
-    @each $bp in map-keys($grid-breakpoints) {
+    // Subset of of `$grid-breakpoints`
+    @each $bp in $navbar-expand-breakpoints {
         $bprule: breakpoint-designator($bp);
         $prev: breakpoint-prev($bp, $grid-breakpoints);
 
