--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -25,7 +25,8 @@
 
 
 // Repsonsive border addition and removal
-@each $breakpoint in map-keys($grid-breakpoints) {
+// Subset of of `$grid-breakpoints`
+@each $breakpoint in $utility-border-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
