--- a/scss/utilities/_flex.scss
+++ b/scss/utilities/_flex.scss
@@ -3,7 +3,8 @@
 // Flexbox utilities
 // Custom styles for additional flexbox alignment
 
-@each $breakpoint in map-keys($grid-breakpoints) {
+// Subset of of `$grid-breakpoints`
+@each $breakpoint in $utility-flex-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
