--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -1,7 +1,8 @@
 // stylelint-disable declaration-no-important
 
 // Common positioning
-@each $breakpoint in map-keys($grid-breakpoints) {
+// Subset of of `$grid-breakpoints`
+@each $breakpoint in $utility-position-breakpoints {
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
