start per component sizing with button

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -428,6 +428,11 @@ $component-sizes: (
     )
 ) !default;
 
+// Per component sizing
+$btn-sizes: $component-sizes !default;
+
+
+
 // Shadows
 // =====
 // Control the `box-shadow` depth.
@@ -583,10 +588,10 @@ $table-hover-alt-bgi:       linear-gradient(0deg, rgba($white, .2) 0%, rgba($whi
 
 // Buttons
 // =====
-$btn-padding-y:             .375rem !default;
+$btn-padding-y:             .25rem !default;
 $btn-padding-x:             .75rem !default;
 $btn-font-weight:           $font-weight-normal !default;
-$btn-line-height:           1.25 !default;
+$btn-line-height:           1.5 !default;
 $btn-border-width:          $border-width !default;
 $btn-border-radius:         $border-radius !default;
 $btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 .125em .125em rgba($black, .075) !default;
