--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -72,9 +72,10 @@
 }
 
 // Button sizes
-@mixin button-size($padding-y, $padding-x, $font-size, $border-radius) {
+@mixin button-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
     padding: $padding-y $padding-x;
     @include font-size($font-size);
+    line-height: $line-height;
     // Manually declare to provide an override to the browser default
     @if $enable-rounded {
         border-radius: $border-radius;
