--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -5,7 +5,7 @@
     display: block;
     width: 100%;
     // Make inputs the height of their button counterpart (line-height + padding + border)
-    height: $select-height;
+    height: $input-height-outer;
     padding: $input-padding-y ($input-padding-x / 2);
     @include font-size($font-size-base);
     line-height: $input-line-height;
@@ -119,18 +119,20 @@ textarea.form-control {
 // Build on `.form-control` with modifier classes to decrease or increase the
 // height and font-size of form controls.
 @if $enable-sizing {
-    @each $size, $dims in $component-sizes {
+    @each $size, $dims in $input-sizes {
         $sz-font-size:     map-get($dims, "font-size");
-        $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
+        $sz-line-height:   map-get($dims, "line-height");
+        $sz-padding-y:     map-get($dims, "padding-y");
         $sz-padding-x:     map-get($dims, "padding-x");
         $sz-border-radius: map-get($dims, "border-radius");
-        $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
-        $sz-select-height: calc(#{$sz-input-height} + #{($input-border-width * 2)});
+        $sz-inner-height:  (($sz-font-size * $sz-line-height) + ($sz-padding-y * 2));
+        $sz-outer-height:  calc(#{$sz-inner-height} + #{($input-border-width * 2)});
 
         %form-control-#{$size} {
-            height: $sz-select-height;
+            height: $sz-outer-height;
             padding: $sz-padding-y ($sz-padding-x / 2);
             @include font-size($sz-font-size);
+            line-height: $sz-line-height;
             @include border-radius($sz-border-radius);
         }
 
@@ -143,11 +145,7 @@ textarea.form-control {
             padding-top: calc(#{$sz-padding-y} + #{$input-border-width});
             padding-bottom: calc(#{$sz-padding-y} + #{$input-border-width});
             @include font-size($sz-font-size);
-            //line-height: ($sz-font-size * $input-line-height);
-        }
-
-        .form-control-legend-#{$size} {
-            @include font-size($sz-font-size);
+            line-height: $sz-line-height;
         }
     }
 }
@@ -217,8 +215,8 @@ textarea.form-control {
 .form-control-icon {
     padding-right: ($input-padding-x * 3);
     background-repeat: no-repeat;
-    background-position: center right ($input-height / 4);
-    background-size: ($input-height / 2) ($input-height / 2);
+    background-position: center right ($input-height-inner / 4);
+    background-size: ($input-height-inner / 2) ($input-height-inner / 2);
 }
 
 // Form validation states
@@ -251,18 +249,19 @@ textarea.form-control {
 }
 
 @if $enable-sizing {
-    @each $size, $dims in $component-sizes {
+    @each $size, $dims in $input-sizes {
         $sz-font-size:     map-get($dims, "font-size");
-        $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
+        $sz-line-height:   map-get($dims, "line-height");
+        $sz-padding-y:     map-get($dims, "padding-y");
         $sz-padding-x:     map-get($dims, "padding-x");
-        $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
+        $sz-inner-height:  (($sz-font-size * $sz-line-height) + ($sz-padding-y * 2));
 
         .form-control-#{$size},
         .input-group-#{$size} > .form-control {
             &.form-control-icon {
                 padding-right: ($sz-padding-x * 3);
-                background-position: center right ($sz-input-height / 4);
-                background-size: ($sz-input-height / 2) ($sz-input-height / 2);
+                background-position: center right ($sz-inner-height / 4);
+                background-size: ($sz-inner-height / 2) ($sz-inner-height / 2);
             }
         }
     }
