--- a/scss/mixins/_pagination.scss
+++ b/scss/mixins/_pagination.scss
@@ -1,9 +1,10 @@
 // Pagination
-@mixin pagination-size($padding-y, $padding-x, $font-size, $border-radius) {
+@mixin pagination-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
     .page-text,
     .page-link {
         padding: $padding-y $padding-x;
         @include font-size($font-size);
+        line-height: $line-height;
         @include border-radius($border-radius);
     }
 }
