--- a/scss/mixins/_switch.scss
+++ b/scss/mixins/_switch.scss
@@ -10,11 +10,12 @@
 }
 
 // Switch sizes
-@mixin switch-size($font-size, $border-radius, $border-width, $outer-height, $inner-height) {
+@mixin switch-size($font-size, $line-height, $border-radius, $border-width, $outer-height, $inner-height) {
     .switch-control {
         width: ($font-size * $switch-width-multiplier);
         height: $outer-height;
         @include font-size($font-size);
+        line-height: $line-height;
         @include border-radius($border-radius);
 
         &::before {
