--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -398,31 +398,42 @@ $component-section-border-color:    rgba($uibase-900, .3) !default;
 // Used for button, button groups, pagination, form-control, and input-group
 // 'md' is considered to be the default size, so no classes for this size designator are generated, as in *no* `.btn-md`.
 $component-sizes: (
-    xs: (
-        font-size:      ($font-size-base * .75),
-        padding-y:      .1875rem,
-        padding-x:      .375rem,
-        border-radius:  .1875rem
+    "xsmall": (
+        "padding-y":     .125rem,
+        "padding-x":     .375rem,
+        "font-size":     ($font-size-base * .75),
+        "line-height":   1.5,
+        "border-radius": .1875rem
     ),
-    sm: (
-        font-size:      ($font-size-base * .875),
-        padding-y:      .25rem,
-        padding-x:      .5rem,
-        border-radius:  .1875rem
+    "small": (
+        "padding-y":     .1875rem,
+        "padding-x":     .5rem,
+        "font-size":     ($font-size-base * .875),
+        "line-height":   1.5,
+        "border-radius": .1875rem
     ),
-    lg: (
-        font-size:      ($font-size-base * 1.125),
-        padding-y:      .5rem,
-        padding-x:      1.125rem,
-        border-radius:  .3125rem
+    "large": (
+        "padding-y":     .3125rem,
+        "padding-x":     1.125rem,
+        "font-size":     ($font-size-base * 1.125),
+        "line-height":    1.5,
+        "border-radius": .3125rem
     ),
-    xl: (
-        font-size:      ($font-size-base * 1.25),
-        padding-y:      .625rem,
-        padding-x:      1.25rem,
-        border-radius:  .3125rem
+    "xlarge": (
+        "padding-y":     .375rem,
+        "padding-x":     1.25rem,
+        "font-size":     ($font-size-base * 1.25),
+        "line-height":    1.5,
+        "border-radius": .3125rem
     )
 ) !default;
+
+// Per component/utility sizing
+$btn-sizes:             $component-sizes !default;
+$input-sizes:           $component-sizes !default;
+$pagination-sizes:      $component-sizes !default;
+$utility-radius-sizes:  $component-sizes !default;
+
 
 // Shadows
 // =====
@@ -579,10 +590,10 @@ $table-hover-alt-bgi:       linear-gradient(0deg, rgba($white, .2) 0%, rgba($whi
 
 // Buttons
 // =====
-$btn-padding-y:             .375rem !default;
+$btn-padding-y:             .25rem !default;
 $btn-padding-x:             .75rem !default;
 $btn-font-weight:           $font-weight-normal !default;
-$btn-line-height:           1.25 !default;
+$btn-line-height:           1.5 !default;
 $btn-border-width:          $border-width !default;
 $btn-border-radius:         $border-radius !default;
 $btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 .125em .125em rgba($black, .075) !default;
@@ -607,12 +618,9 @@ $btn-default-active-hover-color:    color-if-contrast($btn-default-hover-color, 
 // Forms
 // =====
 // Padding and line-height should add up to buttons for inputs and selects
-// An included line-height-delta routine is included to make this easier
 // Implemented horizontal padding will be 1/2 of stated `padding-x`
-$input-line-height:             1.5 !default;
-$input-line-height-delta:      ($input-line-height - $btn-line-height) !default;
-
-$input-padding-y:               $btn-padding-y - ($input-line-height-delta * $font-size-base / 2) !default;
+$input-line-height:             $btn-line-height !default;
+$input-padding-y:               $btn-padding-y !default;
 $input-padding-x:               $btn-padding-x !default;
 
 $input-color:                   $uibase-700 !default;
@@ -653,8 +661,8 @@ $form-inline-breakpoint:         sm !default;
 
 // Base input/select height calculation
 // Additional ones for each size are done during size processing generation
-$input-height:      (($font-size-base * $input-line-height) + ($input-padding-y * 2)) !default;
-$select-height:     calc(#{$input-height} + #{($border-width * 2)}) !default;
+$input-height-inner:    ($font-size-base * $input-line-height) + ($input-padding-y * 2) !default;
+$input-height-outer:    calc(#{$input-height-inner} + #{($border-width * 2)}) !default;
 
 // Form icons
 // =====
