--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -1,7 +1,10 @@
+// stylelint-disable selector-no-qualifying-type
+
 // Base styles
 .input-group {
     position: relative;
     display: flex;
+    flex-wrap: wrap; // For form validation feedback
     align-items: stretch;
     width: 100%;
 
@@ -13,16 +16,18 @@
         width: 1%;
         margin-bottom: 0;
 
-        // Bring the "active" form control to the front
-        @include hover-focus-active {
-            z-index: 3;
-        }
-
         + .form-control,
         + .custom-select,
         + .custom-file {
             margin-left: -$input-border-width;
         }
+    }
+
+    // Bring the "active" form control to the top of surrounding elements
+    > .form-control:focus,
+    > .custom-select:focus,
+    > .custom-file .custom-file-input:focus ~ .custom-file-label {
+        z-index: 3;
     }
 
     > .form-control,
@@ -34,125 +39,62 @@
     // Custom file inputs have more complex markup,
     // needing special overrides.
     > .custom-file {
-        .custom-file-control {
-            z-index: 0;
-        }
+        display: flex;
+        align-items: center;
 
-        .custom-file-input {
-            &:focus ~ .custom-file-control {
-                z-index: 2;
-            }
-        }
-
-        &:not(:first-child) .custom-file-control { @include border-start-radius(0); }
-        &:not(:last-child) .custom-file-control { @include border-end-radius(0); }
+        &:not(:last-child) .custom-file-label,
+        &:not(:last-child) .custom-file-label::after { @include border-end-radius(0); }
+        &:not(:first-child) .custom-file-label { @include border-start-radius(0); }
     }
 }
 
-.input-group-addon,
-.input-group-btn,
-.input-group > .form-control,
-.input-group > .custom-select,
-.input-group > .custom-file {
+// Addon
+// While it requires one extra layer of HTML for each, dedicated addon element allows for:
+// 1) be less clever
+// 2) simplify our selectors
+// 3) support HTML5 form validation
+.input-group-addon {
+    display: flex;
+    margin-left: -$input-border-width;
+
+    // Ensure buttons are always above inputs for more visually pleasing borders.
+    // This isn't needed for `.input-group-text` since it shares the same border-color
+    // as our inputs.
+    .btn {
+        position: relative;
+        z-index: 2;
+    }
+
+    .btn + .btn,
+    .btn + .input-group-text,
+    .input-group-text + .input-group-text,
+    .input-group-text + .btn {
+        margin-left: -$input-border-width;
+    }
+}
+
+// Textual addon item
+// Catch-all element for any text or radio/checkbox input you wish
+// to addon to an input.
+.input-group-text {
     display: flex;
     align-items: center;
-}
-
-.input-group-addon,
-.input-group-btn {
-    white-space: nowrap;
-}
-
-// Text input groups
-.input-group-addon {
     padding: $input-padding-y $input-padding-x;
     margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-    @include font-size($font-size-base);
+    @include font-size($font-size-base); // Match inputs
     font-weight: $font-weight-normal;
     line-height: $input-line-height;
     color: $input-group-addon-color;
     text-align: center;
+    white-space: nowrap;
     background-color: $input-group-addon-bg;
     border: $input-border-width solid $input-group-addon-border-color;
-    @include border-radius($border-radius);
+    @include border-radius($input-border-radius);
 
     // Nuke default margins from checkboxes and radios to vertically center within.
-    // stylelint-disable selector-no-qualifying-type
     input[type="radio"],
     input[type="checkbox"] {
         margin-top: 0;
-    }
-    // stylelint-enable selector-no-qualifying-type
-}
-
-//.has-sucess,
-//.has-warning,
-//.has-danger {
-//    .input-group-btn {
-//        &:not(:first-child) {
-//            > .btn,
-//            > .btn-group {
-//                z-index: 1;
-//            }
-//        }
-//    }
-//}
-
-// Button input groups
-.input-group-btn {
-    position: relative;
-    align-items: stretch;
-    // Jankily prevent input button groups from wrapping with `white-space` and
-    // `font-size` in combination with `inline-block` on buttons.
-    font-size: 0;
-    white-space: nowrap;
-
-    // Negative margin for spacing, position for bringing hovered/focused/actived
-    // element above the siblings.
-    > .btn {
-        position: relative;
-        z-index: 2;
-        // Vertically stretch the button and center its content
-        align-self: stretch;
-
-        + .btn {
-            margin-left: (-$input-border-width);
-        }
-
-        // Bring the "active" button to the front
-        @include hover-focus-active {
-            z-index: 3;
-        }
-    }
-
-    &:first-child > .btn + .btn {
-        margin-left: 0;
-    }
-
-    // Negative margin to only have a single, shared border between the two
-    &:not(:last-child) {
-        > .btn,
-        > .btn-group {
-            margin-right: (-$input-border-width);
-        }
-    }
-    &:not(:first-child) {
-        > .btn,
-        > .btn-group {
-            z-index: 1;
-            margin-left: (-$input-border-width);
-            // Because specificity
-            @include hover-focus-active {
-                z-index: 2;
-            }
-        }
-    }
-
-    + .input-group-btn {
-        > .btn,
-        > .btn-group {
-            margin-left: 0;
-        }
     }
 }
 
