--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -7,11 +7,14 @@
 // Base class takes care of all the key behavioral aspects.
 .custom-control {
     position: relative;
-    display: inline-block;
+    display: block;
     min-height: (1rem * $line-height-base);
     padding-left: $custom-control-gutter;
+}
+
+.custom-control-inline {
+    display: inline-flex;
     margin-right: $custom-control-spacer-x;
-    margin-bottom: 0;
 }
 
 .custom-control-input {
@@ -19,82 +22,106 @@
     z-index: -1; // Put the input behind the label so it doesn't overlay text
     opacity: 0;
 
-    &:checked ~ .custom-control-indicator {
+    &:checked ~ .custom-control-label::before {
         color: $custom-control-checked-indicator-color;
         background-color: $custom-control-checked-indicator-bg;
+        border: 0;
         @include box-shadow($custom-control-checked-indicator-box-shadow);
     }
 
-    &:focus ~ .custom-control-indicator {
+    &:focus ~ .custom-control-label::before {
         @include box-shadow($input-focus-box-shadow);
     }
 
-    &:active ~ .custom-control-indicator {
+    &:active ~ .custom-control-label::before {
         color: $custom-control-active-indicator-color;
         background-color: $custom-control-active-indicator-bg;
     }
 
     &:disabled {
-        ~ .custom-control-indicator {
-            background-color: $custom-control-disabled-indicator-bg;
-            border: 0;
-        }
-
-        ~ .custom-control-description {
+        ~ .custom-control-label {
             color: $custom-control-disabled-description-color;
+
+            &::before {
+                background-color: $custom-control-disabled-indicator-bg;
+                border: 0;
+            }
         }
     }
 }
 
-// Custom indicator
-// Generates a shadow element to create our makeshift checkbox/radio background.
-.custom-control-indicator {
-    position: absolute;
-    top: (($line-height-base - $custom-control-indicator-size) / 2);
-    left: 0;
-    display: block;
-    width: $custom-control-indicator-size;
-    height: $custom-control-indicator-size;
-    pointer-events: none;
-    user-select: none;
-    background-color: $custom-control-indicator-bg;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: $custom-control-indicator-bg-size;
-    border: $custom-control-indicator-border-width solid $custom-control-indicator-border-color;
-    @include box-shadow($custom-control-indicator-box-shadow);
-    @include transition($input-transition);
+// Custom control indicators
+// Generate custom controls from pseudo-elements.
+.custom-control-label {
+    position: relative;
+    margin-bottom: 0;
+
+    // Background (color and border)
+    &::before {
+        position: absolute;
+        top: (($line-height-base - $custom-control-indicator-size) / 2);
+        left: -$custom-control-gutter;
+        display: block;
+        width: $custom-control-indicator-size;
+        height: $custom-control-indicator-size;
+        pointer-events: none;
+        content: "";
+        user-select: none;
+        background-color: $custom-control-indicator-bg;
+        border: $custom-control-indicator-border-width solid $custom-control-indicator-border-color;
+        @include box-shadow($custom-control-indicator-box-shadow);
+    }
+
+    // Foreground (icon)
+    &::after {
+        position: absolute;
+        top: (($line-height-base - $custom-control-indicator-size) / 2);
+        left: -$custom-control-gutter;
+        display: block;
+        width: $custom-control-indicator-size;
+        height: $custom-control-indicator-size;
+        content: "";
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: $custom-control-indicator-bg-size;
+    }
 }
 
 // Checkboxes
 // Tweak just a few things for checkboxes.
 .custom-checkbox {
-    .custom-control-indicator {
+    .custom-control-label::before {
         @include border-radius($custom-checkbox-radius);
     }
 
-    .custom-control-input:checked ~ .custom-control-indicator {
-        background-image: $custom-checkbox-checked-icon;
-        border: 0;
+    .custom-control-input:checked ~ .custom-control-label {
+        &::after {
+            background-image: $custom-checkbox-checked-icon;
+        }
     }
 
-    .custom-control-input:indeterminate ~ .custom-control-indicator {
-        background-color: $custom-checkbox-indeterminate-bg;
-        background-image: $custom-checkbox-indeterminate-icon;
-        @include box-shadow($custom-checkbox-indeterminate-box-shadow);
+    .custom-control-input:indeterminate ~ .custom-control-label {
+        &::before {
+            background-color: $custom-checkbox-indeterminate-bg;
+            @include box-shadow($custom-checkbox-indeterminate-box-shadow);
+        }
+        &::after {
+            background-image: $custom-checkbox-indeterminate-icon;
+        }
     }
 }
 
 // Radios
 // Tweak just a few things for radios.
 .custom-radio {
-    .custom-control-indicator {
+    .custom-control-label::before {
         border-radius: $custom-radio-radius;
     }
 
-    .custom-control-input:checked ~ .custom-control-indicator {
-        background-image: $custom-radio-checked-icon;
-        border: 0;
+    .custom-control-input:checked ~ .custom-control-label {
+        &::after {
+            background-image: $custom-radio-checked-icon;
+        }
     }
 }
 
@@ -135,14 +162,9 @@
     @include transition($input-transition);
     appearance: none;
 
+    @include form-control-focus();
+
     &:focus {
-        color: $input-focus-color;
-        background-color: $input-focus-bg;
-        border-color: $input-focus-border-color;
-        outline: 0;
-
-        @include box-shadow($input-focus-box-shadow);
-
         &::-ms-value {
             // For visual consistency with other platforms/browsers,
             // suppress the default white text on blue background highlight given to
@@ -207,23 +229,35 @@
 }
 
 .custom-file-input {
-    min-width: $custom-file-width;
-    max-width: 100%;
+    position: relative;
+    z-index: 2;
+    width: 100%;
     height: $input-height-outer;
     margin: 0;
     opacity: 0;
 
-    &:focus ~ .custom-file-control {
+    &:focus ~ .custom-file-label {
         border-color: $input-focus-border-color;
         @include box-shadow($input-focus-box-shadow);
+
+        &::after {
+            border-color: $input-focus-border-color;
+        }
     }
 
-    &:focus ~ .custom-file-control::before {
-        @include box-shadow($btn-box-shadow);
+    &:disabled ~ .custom-file-label {
+        color: $input-disabled-color;
+        background-color: $input-disabled-bg;
+    }
+
+    @each $lang, $text in $custom-file-text {
+        &:lang(#{$lang}) ~ .custom-file-label::after {
+            content: $text;
+        }
     }
 }
 
-.custom-file-control {
+.custom-file-label {
     position: absolute;
     top: 0;
     right: 0;
@@ -234,25 +268,13 @@
     overflow: hidden;
     line-height: $input-line-height;
     color: $input-color;
-    pointer-events: none;
-    user-select: none;
     background-color: $input-bg;
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
     @include transition($input-transition);
 
-    &:empty::after {
-        content: map-get(map-get($custom-file-text, placeholder), en);
-    }
-
-    @each $lang, $text in map-get($custom-file-text, placeholder) {
-        &:lang(#{$lang}):empty::after {
-            content: $text;
-        }
-    }
-
-    &::before {
+    &::after {
         position: absolute;
         top: 0;
         right: 0;
@@ -262,16 +284,10 @@
         padding: $input-padding-y $input-padding-x;
         line-height: $input-line-height;
         color: $custom-file-button-color;
-        content: map-get(map-get($custom-file-text, button-label), en);
+        content: "Browse";
         background-color: $custom-file-button-bg;
         border-left: $input-border-width solid $input-border-color;
         @include box-shadow($btn-box-shadow);
-    }
-
-    @each $lang, $text in map-get($custom-file-text, button-label) {
-        &:lang(#{$lang})::before {
-            content: $text;
-        }
     }
 }
 
