--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -12,8 +12,16 @@
     color: $input-color;
     background-color: $input-bg;
     border: $input-border-width solid $input-border-color;
+
     // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-    @include border-radius($input-border-radius);
+    @if $enable-rounded {
+        // Manually use the if/else instead of the mixin to account for iOS override
+        border-radius: $input-border-radius;
+    } @else {
+        // Otherwise undo the iOS default
+        border-radius: 0;
+    }
+
     @include box-shadow($input-box-shadow);
     @include transition($input-transition);
 
@@ -31,11 +39,6 @@
         color: $input-placeholder-color;
         // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
         opacity: 1;
-    }
-
-    &:focus,
-    &.focus {
-        @include box-shadow($input-focus-box-shadow);
     }
 
     // Disabled and read-only inputs
@@ -81,28 +84,23 @@ textarea.form-control {
 .form-control-file,
 .form-control-range {
     display: block;
+    width: 100%;
 }
 
-
 // Labels
-// For use with horizontal and inline forms, when you need the label text to
-// align with the form controls.
+// For use with horizontal and inline forms, when you need the label
+// (or legend) text to align with the form controls.
 .form-control-label {
     padding-top: calc(#{$input-padding-y} + #{$input-border-width});
     padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
-    margin-bottom: 0; // Override the `<label>` default
-}
-
-// Legends
-// When you need the legend text to be the same size as regular labels.
-.form-control-legend {
-    margin-bottom: 0; // Override the `<legend>` default
-    @include font-size($font-size-base);
+    margin-bottom: 0; // Override the `<label>/<legend>` default
+    font-size: inherit; // Override the `<legend>` default
+    line-height: $input-line-height;
 }
 
 // Static form control text
-// Apply class to an element to make any string of text align with labels in a
-// horizontal form layout.
+// Apply class to an element to make any string of text align with labels
+// in a horizontal form layout.
 .form-control-static {
     // Size it appropriately next to real form controls
     display: block;
@@ -170,16 +168,10 @@ textarea.form-control {
 .form-check {
     position: relative;
     display: block;
-    margin-bottom: $form-check-margin-bottom;
-
-    // Move up sibling radios or checkboxes for tighter spacing
-    + .form-check {
-        margin-top: $form-check-sibling-margin-top;
-    }
+    padding-left: $form-check-input-gutter;
 }
 
 .form-check-label {
-    padding-left: $form-check-input-gutter;
     margin-bottom: 0; // Override default `<label>` bottom margin
 
     .form-check.disabled &,
@@ -192,80 +184,34 @@ textarea.form-control {
     position: absolute;
     margin-top: $form-check-input-margin-y;
     margin-left: -$form-check-input-gutter;
-    vertical-align: baseline;
     @include transition($input-transition);
 }
 
 // Radios and checkboxes on same line
 .form-check-inline {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    padding-left: 0; // Override base .form-check
     margin-right: $form-check-inline-margin-x;
 
-    .form-check-label {
-        vertical-align: middle;
+    // Undo .form-check-input defaults and add some `margin-right`.
+    .form-check-input {
+        position: static;
+        margin-top: 0;
+        margin-right: $form-check-inline-input-margin-x;
+        margin-left: 0;
     }
 }
 
-// Form control feedback states
-// Apply contextual and semantic states to individual form controls.
-.form-control-feedback {
-    margin-top: $form-feedback-margin-top;
-}
+// Form validation
+//
+// Provide feedback to users when form field values are valid or invalid. Works
+// primarily for client-side validation via scoped `:invalid` and `:valid`
+// pseudo-classes but also includes `.is-invalid` and `.is-valid` classes for
+// server side validation.
 
-.form-control-icon {
-    padding-right: ($input-padding-x * 3);
-    background-repeat: no-repeat;
-    background-position: center right ($input-height-inner / 4);
-    background-size: ($input-height-inner / 2) ($input-height-inner / 2);
-}
-
-// Form validation states
-@if map-has-key($base-colors, "success") {
-    .has-success {
-        @include form-control-validation($success);
-
-        .form-control-icon {
-            background-image: $icon-success;
-        }
-    }
-}
-@if map-has-key($base-colors, "warning") {
-    .has-warning {
-        @include form-control-validation($warning);
-
-        .form-control-icon {
-            background-image: $icon-warning;
-        }
-    }
-}
-@if map-has-key($base-colors, "danger") {
-    .has-danger {
-        @include form-control-validation($danger);
-
-        .form-control-icon {
-            background-image: $icon-danger;
-        }
-    }
-}
-
-@if $enable-sizing {
-    @each $size, $dims in $input-sizes {
-        $sz-font-size:     map-get($dims, "font-size");
-        $sz-line-height:   map-get($dims, "line-height");
-        $sz-padding-y:     map-get($dims, "padding-y");
-        $sz-padding-x:     map-get($dims, "padding-x");
-        $sz-inner-height:  (($sz-font-size * $sz-line-height) + ($sz-padding-y * 2));
-
-        .form-control-#{$size},
-        .input-group-#{$size} > .form-control {
-            &.form-control-icon {
-                padding-right: ($sz-padding-x * 3);
-                background-position: center right ($sz-inner-height / 4);
-                background-size: ($sz-inner-height / 2) ($sz-inner-height / 2);
-            }
-        }
-    }
-}
+@include form-validation-state("valid", $form-feedback-valid-color);
+@include form-validation-state("invalid", $form-feedback-invalid-color);
 
 
 // Inline forms
