--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -1,48 +1,132 @@
 // Form validation states
 //
-// Used in _forms.scss to generate the form validation CSS for warnings, errors,
-// and successes.
-
-@mixin form-control-validation($color) {
-    $level-context-bg: map-get($level-context, "bg");
-    $level-context-border-color: map-get($level-context, "border-color");
-    $level-context-hover-border-color: map-get($level-context, "hover-border-color");
-
-    $bg:           palette($color, $level-context-bg);
-    $border:       palette($color, $level-context-border-color);
-    $border-hover: palette($color, $level-context-hover-border-color);
-
-    // Color the label and help text
-    .form-control-feedback,
-    .form-control-label,
-    .form-check-label,
-    .custom-control {
+// Used in _forms.scss to generate the form validation CSS for
+// valid and invalid states.
+@mixin form-validation-state($state, $color) {
+    .#{$state}-feedback {
+        display: none;
+        width: 100%;
+        margin-top: $form-feedback-margin-top;
+        font-size: $form-feedback-font-size;
         color: $color;
     }
-    // Set the border and box shadow on specific inputs to match
-    .form-control,
-    .custom-select,
-    .custom-file-control {
-        border-color: $border;
 
-        &:focus {
-            border-color: $border-hover;
-            @include box-shadow($input-focus-box-shadow);
+    .#{$state}-tooltip {
+        position: absolute;
+        top: 100%;
+        z-index: 5;
+        display: none;
+        max-width: 100%; // Contain to parent when possible
+        padding: .5rem;
+        margin-top: .1rem;
+        font-size: .875rem;
+        line-height: 1;
+        color: $white;
+        background-color: rgba($color, .8);
+        border-radius: .2rem;
+    }
+
+    .form-control,
+    .custom-select {
+        .was-validated &:#{$state},
+        &.is-#{$state} {
+            border-color: $color;
+
+            &:focus {
+                border-color: $color;
+                box-shadow: 0 0 0 $input-focus-box-shadow-width rgba($color, .25);
+            }
+
+            ~ .#{$state}-feedback,
+            ~ .#{$state}-tooltip {
+                display: block;
+            }
         }
     }
 
-    // Set validation states also for addons
-    .input-group-addon {
-        color: $color;
-        background-color: $bg;
-        border-color: $color;
+    .form-control-file {
+        .was-validated &:#{$state},
+        &.is-#{$state} {
+            ~ .#{$state}-feedback,
+            ~ .#{$state}-tooltip {
+                display: block;
+            }
+        }
+    }
+
+    .form-check-input {
+        .was-validated &:#{$state},
+        &.is-#{$state} {
+            ~ .form-check-label {
+                color: $color;
+            }
+
+            ~ .#{$state}-feedback,
+            ~ .#{$state}-tooltip {
+                display: block;
+            }
+        }
+    }
+
+    .custom-control-input {
+        .was-validated &:#{$state},
+        &.is-#{$state} {
+            ~ .custom-control-label {
+                color: $color;
+
+                &::before {
+                    background-color: lighten($color, 25%);
+                }
+            }
+
+            ~ .#{$state}-feedback,
+            ~ .#{$state}-tooltip {
+                display: block;
+            }
+
+            &:checked {
+                ~ .custom-control-label::before {
+                    //@include gradient-bg(lighten($color, 10%));
+                    background-color: lighten($color, 25%);
+                }
+            }
+
+            &:focus {
+                ~ .custom-control-label::before {
+                    box-shadow: 0 0 0 1px $body-bg, 0 0 0 $input-focus-box-shadow-width rgba($color, .25);
+                }
+            }
+        }
+    }
+
+    // custom file
+    .custom-file-input {
+        .was-validated &:#{$state},
+        &.is-#{$state} {
+            ~ .custom-file-label {
+                border-color: $color;
+
+                &::before { border-color: inherit; }
+            }
+
+            ~ .#{$state}-feedback,
+            ~ .#{$state}-tooltip {
+                display: block;
+            }
+
+            &:focus {
+                ~ .custom-file-label {
+                    box-shadow: 0 0 0 $input-focus-box-shadow-width rgba($color, .25);
+                }
+            }
+        }
     }
 }
 
 // Form control focus state
 //
 // Generate a customized focus state and for any input with the specified color,
-// which defaults to the `@input-border-focus` variable.
+// which defaults to the `@input-focus-border-color` variable.
 //
 // We highly encourage you to not customize the default value, but instead use
 // this to tweak colors on an as-needed basis. This aesthetic change is based on
@@ -57,6 +141,12 @@
         background-color: $input-focus-bg;
         border-color: $input-focus-border-color;
         outline: 0;
-        @include box-shadow($input-focus-box-shadow);
+        // Avoid using mixin so we can pass custom focus shadow properly
+        @if $enable-shadows {
+            box-shadow: $input-box-shadow, $input-focus-box-shadow;
+        } @else {
+            box-shadow: $input-focus-box-shadow;
+        }
     }
 }
+
