custom input tweaks

--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -19,7 +19,9 @@
 
 .custom-control-input {
     position: absolute;
-    z-index: -1; // Put the input behind the label so it doesn't overlay text
+    // Place input behind the label
+    clip: rect(0, 0, 0, 0);
+    pointer-events: none;
     opacity: 0;
 
     &:checked ~ .custom-control-label::before {
@@ -237,11 +239,20 @@
     opacity: 0;
 
     &:focus ~ .custom-file-label {
+        color: $input-focus-color;
+        background-color: $input-focus-bg;
         border-color: $input-focus-border-color;
-        @include box-shadow($input-focus-box-shadow);
+        outline: 0;
+        // Avoid using mixin so we can pass custom focus shadow properly
+        @if $enable-shadows {
+            box-shadow: $input-box-shadow, $input-focus-box-shadow;
+        } @else {
+            box-shadow: $input-focus-box-shadow;
+        }
 
         &::after {
             border-color: $input-focus-border-color;
+            border-left-color: $input-border-color;
         }
     }
 
