--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -76,6 +76,7 @@
 
                 &::before {
                     background-color: lighten($color, 25%);
+                    border-color: $color;
                 }
             }
 
