--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -161,7 +161,6 @@
         border-radius: 0;
     }
     @include box-shadow($input-box-shadow);
-    @include transition($input-transition);
     appearance: none;
 
     @include form-control-focus();
@@ -273,7 +272,7 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     height: $input-height-outer;
     padding: $input-padding-y ($input-padding-x / 2);
     overflow: hidden;
@@ -283,7 +282,6 @@
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
-    @include transition($input-transition);
 
     &::after {
         position: absolute;
@@ -318,7 +316,14 @@
 
     @include border-radius($input-border-radius);
     @include box-shadow($input-box-shadow);
-    @include transition($input-transition);
 
     @include form-control-focus();
+}
+
+// Consolidate transition for filesize savings
+.custom-control-label::before,
+.custom-select,
+.custom-file-label,
+.custom-color {
+    @include transition($input-transition);
 }
