--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -38,7 +38,7 @@
     > .form-control,
     > .custom-select {
         &:not(:first-child) { @include border-start-radius(0); }
-        &:not(:last-of-type) { @include border-end-radius(0); }
+        &:not(:last-child) { @include border-end-radius(0); }
     }
 
     // Custom file inputs have more complex markup,
@@ -141,7 +141,7 @@
 .input-group > .input-group-addon:not(:last-child) > .btn,
 .input-group > .input-group-addon:not(:last-child) > .input-group-text,
 .input-group > .input-group-addon:not(:last-child) > .btn-group > .btn,
-.input-group > .input-group-addon:last-child > .btn:not(:last-of-type),
+.input-group > .input-group-addon:last-child > .btn:not(:last-child),
 .input-group > .input-group-addon:last-child > .input-group-text:not(:last-child),
 .input-group > .input-group-addon:last-child > .btn-group > .btn {
     @include border-end-radius(0);
